Amélioration de évaluation de Lighthouse

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <a href="">Nouveautés</a>
               </li>
               <li class="BugerMenuD">
-                <a href="">
+                <a aria-label="Go to basket" href="">
                   <i class="fa-solid fa-bag-shopping"></i>
                 </a>
               </li>
@@ -69,12 +69,12 @@
     <section class="FirstPage">
       <div class="FirstContainerImgFirstPage">
         <img
-          src="./img/pexels-melvin-buezo-2529147.jpg"
+          src="./img/pexels-melvin-buezo-2529147.png"
           alt="une Basket jaune rouge noir blanc (couleur dominant)"
         />
       </div>
       <div class="SecondContainerImgFirstPage">
-        <img src="./img/pexels-athena-1858404.jpg" alt="Basket blanche" />
+        <img src="./img/pexels-athena-1858404.png" alt="Basket blanche" />
       </div>
       <div class="ThirdContainerFirstPage">
         <h1>Courir en tout temps<span>.</span></h1>
@@ -111,7 +111,7 @@
                 alt=""
               />
             </div>
-            <div class="GridInfoAticle">
+            <div class="FlexInfoActicle">
               <div>
                 <h3>$220</h3>
                 <p>Basket LN</p>
@@ -136,7 +136,7 @@
               />
             </div>
             <div>
-              <div class="GridInfoAticle">
+              <div class="FlexInfoActicle">
                 <div>
                   <h3>$150</h3>
                   <p>Basket LR</p>
@@ -162,7 +162,7 @@
               />
             </div>
             <div>
-              <div class="GridInfoAticle">
+              <div class="FlexInfoActicle">
                 <div>
                   <h3>$180</h3>
                   <p>Basket LB</p>
@@ -192,7 +192,7 @@
                 alt=""
               />
             </div>
-            <div class="GridInfoAticle">
+            <div class="FlexInfoActicle">
               <div>
                 <h3>$44.99</h3>
                 <p>Nike Sportswear</p>
@@ -217,7 +217,7 @@
               />
             </div>
             <div>
-              <div class="GridInfoAticle">
+              <div class="FlexInfoActicle">
                 <div>
                   <h3>$39.99</h3>
                   <p>Nike Sportswear</p>
@@ -244,7 +244,7 @@
               />
             </div>
             <div>
-              <div class="GridInfoAticle">
+              <div class="FlexInfoActicle">
                 <div>
                   <h3>$37.99</h3>
                   <p>Nike Sportswear</p>
