New pages and contact page load - 90%

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
           <div class="ComponentArticleT ArticleFour">
             <div>
               <img
-                src="./img/T-shirt/7a00a24c-824a-495b-a7d3-ba1cab4a4b79.webp"
+                src="./img/T-shirt/7a00a24c-824a-495b-a7d3-ba1cab4a4b79.png"
                 alt=""
               />
             </div>
@@ -212,7 +212,7 @@
           <div class="ComponentArticleT Articlefive">
             <div>
               <img
-                src="./img/T-shirt/2dfda561-df99-49d6-a64b-a235dd1f18c8.webp"
+                src="./img/T-shirt/2dfda561-df99-49d6-a64b-a235dd1f18c8.png"
                 alt=""
               />
             </div>
@@ -239,7 +239,7 @@
           <div class="ComponentArticleT ArticleSix">
             <div>
               <img
-                src="./img/T-shirt/b172164c-9b72-4c48-962f-907b78e5acb0.webp"
+                src="./img/T-shirt/b172164c-9b72-4c48-962f-907b78e5acb0.png"
                 alt=""
               />
             </div>
