New pages and contact page load - 90%

--- a/article1.html
+++ b/article1.html
@@ -1,20 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta
             name="description"
             content="Author: M. Manoah,
     For: E-Commmerce, To: an Projet for Supinfo"
     />
+    <link rel="stylesheet" href="article1.css">
     <link rel="icon" type="image/png" href="./img/logo.png" />
-    <link rel="stylesheet" href="Catégories.css">
-    <title>Nice. - Catégories</title>
+    <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+            integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+    />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+            href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap"
+            rel="stylesheet"
+    />
+    <title>Nice - Contact</title>
 </head>
 <body>
 <header>
     <main>
+
         <!-- le logo en haut à gauche -->
         <div class="ContainerNav">
             <div>
@@ -26,6 +41,8 @@
 
             <!-- La navigation -->
             <nav>
+
+
                 <ul>
 
                     <li class="BugerMenuD">
@@ -38,7 +55,7 @@
                         <a href="">Femmes</a>
                     </li>
                     <li class="BugerMenuD">
-                        <a  href="#">Contact</a>
+                        <a  href="./contact.html">Contact</a>
                     </li>
                     <li class="BugerMenuD">
                         <a aria-label="Go to basket" href="">
@@ -58,5 +75,30 @@
     </main>
 </header>
 
+<section>
+    <div class="ContainerSmallImg">
+        <div>
+            <img src="./img/a4ba5fe9-626d-4d02-bfd5-2847f60252bb.webp" alt="Niki Shoes">
+        </div>
+        <div>
+            <img src="./img/858bae62-65db-4f83-a870-9da6f3d92624.webp" alt="under Niki Shoes">
+        </div>
+        <div>
+            <img src="./img/f200909c-4955-41f5-a5da-1ed625165448.webp" alt="">
+        </div>
+    </div>
+    <div class="ContainerMainArticle">
+        <img src="./img/Baskets/pexels-abdullah-alsaibaie-11281577.jpg" alt="Shoes Main">
+    </div>
+    <div class="TextMainArticle">
+        <h1>
+            Basket LN
+        </h1>
+        <article>
+            On ne plaisante pas avec les classiques. Restez fidèle à la tradition avec des chaussures blanches au style intemporel.
+        </article>
+        <a href="">Ajouter au panier</a>
+    </div>
+</section>
 </body>
 </html>
