--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="UTF-8">
     <meta
             name="description"
@@ -26,7 +27,10 @@
         <!-- le logo en haut à gauche -->
         <div class="ContainerNav">
             <div>
-                <h3>N<span class="hiddenTitle">ice</span><span>.</span></h3>
+                <a href="./index.html">
+                    <h3>N<span class="hiddenTitle">ice</span><span>.</span></h3>
+                </a>
+
             </div>
 
             <!-- La navigation -->
@@ -36,7 +40,7 @@
                 <ul>
 
                     <li class="BugerMenuD">
-                        <a href="">Catégories</a>
+                        <a href="./Catégories.html">Catégories</a>
                     </li>
                     <li class="BugerMenuD">
                         <a href="">Hommes</a>
@@ -45,7 +49,7 @@
                         <a href="">Femmes</a>
                     </li>
                     <li class="BugerMenuD">
-                        <a href="">Nouveautés</a>
+                        <a  href="#">Contact</a>
                     </li>
                     <li class="BugerMenuD">
                         <a aria-label="Go to basket" href="">
@@ -80,15 +84,15 @@
                     />
                     <div>
                         <label for="name"></label>
-                        <input id="name" type="text" name="name" placeholder="nom" required />
+                        <input aria-label="name" id="name" type="text" name="name" placeholder="nom" required />
                     </div>
                     <div>
                         <label for="first_name"></label>
-                        <input id="first_name" type="email" name="email" placeholder="email" required />
+                        <input aria-label="Email" id="first_name" type="email" name="email" placeholder="email" required />
                     </div>
                     <div>
                         <label for="message">
-                            <textarea id="message" name="message" required></textarea>
+                            <textarea aria-label="message" id="message" name="message" required></textarea>
                         </label>
                     </div>
 
@@ -103,6 +107,115 @@
         </div>
     </div>
 </section>
+
+<footer>
+    <div class="FooterContact">
+        <!-- Mettre une classe pour aligner -->
+        <div>
+            <h2>Contact</h2>
+            <div>
+                <div>
+                    <a href="mailto:manoah.mpah@supinfo.com">
+                        manoah.mpah@supinfo.com
+                    </a>
+                </div>
+                <div>
+                    <a href=""> @ManoahMpah </a>
+                </div>
+                <div>
+                    <a href="tel: 0689986514">+33 6 89 98 65 14</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="FooterSeparation"></div>
+    <div class="FooterArticles">
+        <div>
+            <h2>
+                <a class="TitleCa" href=""> Catégories </a>
+            </h2>
+            <div>
+                <a href=""> T-Shirt </a>
+            </div>
+            <div>
+                <a href=""> Shirt </a>
+            </div>
+            <div>
+                <a href=""> Chaussures </a>
+            </div>
+            <div>
+                <a href=""> Chaussettes </a>
+            </div>
+            <div>
+                <a href=""> Jean </a>
+            </div>
+
+        </div>
+        <div>
+            <h2>
+                <a class="TitleCa" href=""> Hommes </a>
+            </h2>
+            <div>
+                <a href=""> T-Shirt </a>
+            </div>
+            <div>
+                <a href=""> Shirt </a>
+            </div>
+            <div>
+                <a href=""> Chaussures </a>
+            </div>
+            <div>
+                <a href=""> Chaussettes </a>
+            </div>
+            <div>
+                <a href=""> Jean </a>
+            </div>
+
+        </div>
+        <div>
+            <h2>
+                <a class="TitleCa" href=""> Femmes </a>
+            </h2>
+            <div>
+                <a href=""> T-Shirt </a>
+            </div>
+            <div>
+                <a href=""> Shirt </a>
+            </div>
+            <div>
+                <a href=""> Chaussures </a>
+            </div>
+            <div>
+                <a href=""> Chaussettes </a>
+            </div>
+            <div>
+                <a href=""> Jean </a>
+            </div>
+
+        </div>
+        <div>
+            <h2>
+                <a class="TitleCa" href=""> Nouveautés </a>
+            </h2>
+            <div>
+                <a href=""> T-Shirt </a>
+            </div>
+            <div>
+                <a href=""> Shirt </a>
+            </div>
+            <div>
+                <a href=""> Chaussures </a>
+            </div>
+            <div>
+                <a href=""> Chaussettes </a>
+            </div>
+            <div>
+                <a href=""> Jean </a>
+            </div>
+
+        </div>
+    </div>
+</footer>
 
 </body>
 
