--- a/NavPhone.html
+++ b/NavPhone.html
@@ -30,7 +30,7 @@
           <li><a href="">Hommes</a></li>
           <li><a href="">Femmes</a></li>
           <li><a href="">Catégories</a></li>
-          <li><a href="">Nouveautés</a></li>
+          <li><a href="./contact.html">Contact</a></li>
         </ul>
       </div>
     </div>
