all links add in Catégories section

--- a/NavPhone.html
+++ b/NavPhone.html
@@ -20,7 +20,7 @@
   <body>
     <div>
       <div>
-        <a href="./index.html">
+        <a href="javascript:history.back()">
           <div class="cross crossOne"></div>
           <div class="cross crossTwo"></div>
         </a>
