--- a/article1.html
+++ b/article1.html
@@ -24,7 +24,7 @@
             href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap"
             rel="stylesheet"
     />
-    <title>Nice - Contact</title>
+    <title>Nice - Basket LN</title>
 </head>
 <body>
 <header>
@@ -46,7 +46,7 @@
                 <ul>
 
                     <li class="BugerMenuD">
-                        <a href="./Catégories.html">Catégories</a>
+                        <a href="./chaussures.html">Catégories</a>
                     </li>
                     <li class="BugerMenuD">
                         <a href="">Hommes</a>
@@ -97,8 +97,134 @@
         <article>
             On ne plaisante pas avec les classiques. Restez fidèle à la tradition avec des chaussures blanches au style intemporel.
         </article>
+        <label for="height"></label>
+        <select name="optionHeight" id="height">
+            <option value="">
+                choisir une taille
+            </option>
+            <option value="">
+                36
+            </option>
+            <option value="">
+                37
+            </option>
+            <option value="">
+                38
+            </option>
+            <option value="">
+                39
+            </option>
+            <option value="">
+                40
+            </option>
+            <option value="">
+                41
+            </option>
+            <option value="">
+                42
+            </option>
+            <option value="">
+                43
+            </option>
+            <option value="">
+                44
+            </option>
+            <option value="">
+                45
+            </option>
+        </select>
         <a href="">Ajouter au panier</a>
     </div>
 </section>
+<footer>
+    <div class="FooterContact">
+        <!-- Mettre une classe pour aligner -->
+        <div>
+            <h2>
+                <a href="./contact.html">contact</a>
+            </h2>
+            <div>
+                <div>
+                    <a href="mailto:manoah.mpah@supinfo.com">
+                        manoah.mpah@supinfo.com
+                    </a>
+                </div>
+                <div>
+                    <a href=""> @ManoahMpah </a>
+                </div>
+                <div>
+                    <a href="tel: 0689986514">+33 6 89 98 65 14</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="FooterSeparation"></div>
+    <div class="FooterArticles">
+        <div>
+            <h2>
+                <a class="TitleCa" href="#"> Catégories </a>
+            </h2>
+            <div>
+                <a href=""> T-Shirt </a>
+            </div>
+            <div>
+                <a href=""> Shirt </a>
+            </div>
+            <div>
+                <a href=""> Chaussures </a>
+            </div>
+            <div>
+                <a href=""> Chaussettes </a>
+            </div>
+            <div>
+                <a href=""> Jean </a>
+            </div>
+
+        </div>
+        <div>
+            <h2>
+                <a class="TitleCa" href=""> Hommes </a>
+            </h2>
+            <div>
+                <a href=""> T-Shirt </a>
+            </div>
+            <div>
+                <a href=""> Shirt </a>
+            </div>
+            <div>
+                <a href=""> Chaussures </a>
+            </div>
+            <div>
+                <a href=""> Chaussettes </a>
+            </div>
+            <div>
+                <a href=""> Jean </a>
+            </div>
+
+        </div>
+        <div>
+            <h2>
+                <a class="TitleCa" href=""> Femmes </a>
+            </h2>
+            <div>
+                <a href=""> T-Shirt </a>
+            </div>
+            <div>
+                <a href=""> Shirt </a>
+            </div>
+            <div>
+                <a href=""> Chaussures </a>
+            </div>
+            <div>
+                <a href=""> Chaussettes </a>
+            </div>
+            <div>
+                <a href=""> Jean </a>
+            </div>
+
+        </div>
+
+    </div>
+</footer>
 </body>
 </html>
