--- a/article2.html
+++ b/article2.html
@@ -39,7 +39,7 @@
                 <ul>
 
                     <li class="BugerMenuD">
-                        <a href="./Catégories.html">Catégories</a>
+                        <a href="./chaussures.html">Catégories</a>
                     </li>
                     <li class="BugerMenuD">
                         <a href="">Hommes</a>
