--- a/sac.html
+++ b/sac.html
@@ -3,14 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta
+            name="description"
+            content="Author: M. Manoah,
+    For: E-Commmerce, To: an Projet for Supinfo"
+    />
+    <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+            integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="sac.css">
     <link rel="icon" type="image/png" href="./img/logo.png" />
-    <link rel="stylesheet" href="Hommes.css">
-    <title>Nice. - Hommes</title>
+    <title>Nice. - Catégories</title>
 </head>
 <body>
 <header>
     <main>
-
         <!-- le logo en haut à gauche -->
         <div class="ContainerNav">
             <div>
@@ -22,12 +33,10 @@
 
             <!-- La navigation -->
             <nav>
-
-
                 <ul>
 
                     <li class="BugerMenuD">
-                        <a href="./chaussures.html">Catégories</a>
+                        <a href="#">Catégories</a>
                     </li>
                     <li class="BugerMenuD">
                         <a href="">Hommes</a>
@@ -36,7 +45,7 @@
                         <a href="">Femmes</a>
                     </li>
                     <li class="BugerMenuD">
-                        <a  href="#">Contact</a>
+                        <a  href="./contact.html">Contact</a>
                     </li>
                     <li class="BugerMenuD">
                         <a aria-label="Go to basket" href="">
@@ -54,6 +63,17 @@
             </nav>
         </div>
     </main>
+    <section>
+        <nav class="SecondNav">
+            <ul>
+                <li><a href="#">Chaussures</a></li>
+                <li><a href="">T-shirt</a></li>
+                <li><a href="">Sac</a></li>
+                <li><a href="">Shirt</a></li>
+            </ul>
+        </nav>
+    </section>
 </header>
+
 </body>
 </html>
