--- a/shirt.html
+++ b/shirt.html
@@ -8,8 +8,15 @@
             content="Author: M. Manoah,
     For: E-Commmerce, To: an Projet for Supinfo"
     />
+    <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+            integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="shirt.css">
     <link rel="icon" type="image/png" href="./img/logo.png" />
-    <link rel="stylesheet" href="Catégories.css">
     <title>Nice. - Catégories</title>
 </head>
 <body>
@@ -29,7 +36,7 @@
                 <ul>
 
                     <li class="BugerMenuD">
-                        <a href="./Catégories.html">Catégories</a>
+                        <a href="#">Catégories</a>
                     </li>
                     <li class="BugerMenuD">
                         <a href="">Hommes</a>
@@ -38,7 +45,7 @@
                         <a href="">Femmes</a>
                     </li>
                     <li class="BugerMenuD">
-                        <a  href="#">Contact</a>
+                        <a  href="./contact.html">Contact</a>
                     </li>
                     <li class="BugerMenuD">
                         <a aria-label="Go to basket" href="">
@@ -56,6 +63,16 @@
             </nav>
         </div>
     </main>
+    <section>
+        <nav class="SecondNav">
+            <ul>
+                <li><a href="#">Chaussures</a></li>
+                <li><a href="">T-shirt</a></li>
+                <li><a href="">Sac</a></li>
+                <li><a href="">Shirt</a></li>
+            </ul>
+        </nav>
+    </section>
 </header>
 
 </body>
