Catégory Shorts & Shoes done !!

--- a/article2.html
+++ b/article2.html
@@ -67,5 +67,176 @@
         </div>
     </main>
 </header>
+
+<section>
+    <div class="ContainerSmallImg">
+        <div>
+            <img src="./img/Baskets/NikeAirJordan1MidReverseChicago1-737134.webp" alt="Niki Shoes">
+        </div>
+        <div>
+            <img src="./img/Baskets/NikeAirJordan1MidReverseChicago2-919599.webp" alt="under Niki Shoes">
+        </div>
+        <div>
+            <img src="./img/Baskets/NikeAirJordan1MidReverseChicago3-944158.webp" alt="">
+        </div>
+    </div>
+    <div class="ContainerMainArticle">
+        <img src="./img/Baskets/pexels-cristiano-de-luca-10963373.jpg" alt="Shoes Main">
+    </div>
+    <div class="TextMainArticle">
+        <h1>
+            Basket LR
+        </h1>
+        <article>
+            Découvrez les baskets rouges légendaires de Nice pour hommes. L'essence même de l'élégance décontractée.
+        </article>
+        <label for="height"></label>
+        <select name="optionHeight" id="height">
+            <option value="">
+                choisir une taille
+            </option>
+            <option value="">
+                36
+            </option>
+            <option value="">
+                37
+            </option>
+            <option value="">
+                38
+            </option>
+            <option value="">
+                39
+            </option>
+            <option value="">
+                40
+            </option>
+            <option value="">
+                41
+            </option>
+            <option value="">
+                42
+            </option>
+            <option value="">
+                43
+            </option>
+            <option value="">
+                44
+            </option>
+            <option value="">
+                45
+            </option>
+        </select>
+        <a href="">Ajouter au panier</a>
+    </div>
+</section>
+
+<footer>
+    <div class="FooterContact">
+        <!-- Mettre une classe pour aligner -->
+        <div>
+            <h2>Contact</h2>
+            <div>
+                <div>
+                    <a href="mailto:manoah.mpah@supinfo.com">
+                        manoah.mpah@supinfo.com
+                    </a>
+                </div>
+                <div>
+                    <a href=""> @ManoahMpah </a>
+                </div>
+                <div>
+                    <a href="tel: 0689986514">+33 6 89 98 65 14</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="FooterSeparation"></div>
+    <div class="FooterArticles">
+        <div>
+            <h2>
+                <a class="TitleCa" href=""> Catégories </a>
+            </h2>
+            <div>
+                <a href=""> T-Shirt </a>
+            </div>
+            <div>
+                <a href=""> Shirt </a>
+            </div>
+            <div>
+                <a href=""> Chaussures </a>
+            </div>
+            <div>
+                <a href=""> Chaussettes </a>
+            </div>
+            <div>
+                <a href=""> Jean </a>
+            </div>
+
+        </div>
+        <div>
+            <h2>
+                <a class="TitleCa" href=""> Hommes </a>
+            </h2>
+            <div>
+                <a href=""> T-Shirt </a>
+            </div>
+            <div>
+                <a href=""> Shirt </a>
+            </div>
+            <div>
+                <a href=""> Chaussures </a>
+            </div>
+            <div>
+                <a href=""> Chaussettes </a>
+            </div>
+            <div>
+                <a href=""> Jean </a>
+            </div>
+
+        </div>
+        <div>
+            <h2>
+                <a class="TitleCa" href=""> Femmes </a>
+            </h2>
+            <div>
+                <a href=""> T-Shirt </a>
+            </div>
+            <div>
+                <a href=""> Shirt </a>
+            </div>
+            <div>
+                <a href=""> Chaussures </a>
+            </div>
+            <div>
+                <a href=""> Chaussettes </a>
+            </div>
+            <div>
+                <a href=""> Jean </a>
+            </div>
+
+        </div>
+        <div>
+            <h2>
+                <a class="TitleCa" href=""> Nouveautés </a>
+            </h2>
+            <div>
+                <a href=""> T-Shirt </a>
+            </div>
+            <div>
+                <a href=""> Shirt </a>
+            </div>
+            <div>
+                <a href=""> Chaussures </a>
+            </div>
+            <div>
+                <a href=""> Chaussettes </a>
+            </div>
+            <div>
+                <a href=""> Jean </a>
+            </div>
+
+        </div>
+    </div>
+</footer>
 </body>
 </html>
