--- a/chaussures.html
+++ b/chaussures.html
@@ -69,11 +69,286 @@
                 <li><a class="Here" href="#">Chaussures</a></li>
                 <li><a href="">T-shirt</a></li>
                 <li><a href="">Sac</a></li>
-                <li><a href="">Shirt</a></li>
+                <li><a href="./shorts.html">shorts</a></li>
             </ul>
         </nav>
     </section>
-</header>
+    <section>
+        <div>
+            <div class="ContainerArticles">
+                <!-- Basket 1 -->
 
+                <div class="ComponentArticle ArticleOne">
+                    <div>
+                        <img
+                                src="./img/Baskets/pexels-abdullah-alsaibaie-11281577.jpg"
+                                alt=""
+                        />
+                    </div>
+                    <div class="FlexInfoActicle">
+                        <div>
+                            <h3>$220</h3>
+                            <p>Basket LN</p>
+                        </div>
+                        <div class="ContainerBV">
+                            <a href="./article1.html">
+                                Voir
+                                <i class="fa-solid fa-plus"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Basket 2 -->
+
+                <div class="ComponentArticle ArticleTwo">
+                    <div>
+                        <img
+                                src="./img/Baskets/pexels-cristiano-de-luca-10963373.jpg"
+                                alt=""
+                        />
+                    </div>
+                    <div>
+                        <div class="FlexInfoActicle">
+                            <div>
+                                <h3>$150</h3>
+                                <p>Basket LR</p>
+                            </div>
+                            <div>
+                                <!-- Ajouter href -->
+                                <a href="./article2.html">
+                                    Voir
+                                    <i class="fa-solid fa-plus"></i>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Basket 3 -->
+
+                <div class="ComponentArticle ArticleThree">
+                    <div>
+                        <img
+                                src="./img/Baskets/pexels-ray-piedra-1464625 (1).jpg"
+                                alt=""
+                        />
+                    </div>
+                    <div>
+                        <div class="FlexInfoActicle">
+                            <div>
+                                <h3>$180</h3>
+                                <p>Basket LB</p>
+                            </div>
+                            <div>
+                                <!-- Ajouter href -->
+                                <a href="">
+                                    Hors stock
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="ComponentArticle ArticleFour">
+                    <div>
+                        <img
+                                src="./img/Baskets/$R6WQORD.jpg"
+                                alt=""
+                        />
+                    </div>
+                    <div>
+                        <div class="FlexInfoActicle">
+                            <div>
+                                <h3>$250</h3>
+                                <p>Basket LK</p>
+                            </div>
+                            <div>
+                                <!-- Ajouter href -->
+                                <a href="">
+                                    Hors stock
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="ComponentArticle ArticleFive">
+                    <div>
+                        <img
+                                src="./img/Baskets/$R93ODBW.jpg"
+                                alt=""
+                        />
+                    </div>
+                    <div>
+                        <div class="FlexInfoActicle">
+                            <div>
+                                <h3>$120</h3>
+                                <p>Basket LQ</p>
+                            </div>
+                            <div>
+                                <!-- Ajouter href -->
+                                <a href="">
+                                    Hors stock
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="ComponentArticle ArticleSix">
+                    <div>
+                        <img
+                                src="./img/Baskets/pexels-jd-danny-2385477.png"
+                                alt=""
+                        />
+                    </div>
+                    <div>
+                        <div class="FlexInfoActicle">
+                            <div>
+                                <h3>$220</h3>
+                                <p>Basket LJ</p>
+                            </div>
+                            <div>
+                                <!-- Ajouter href -->
+                                <a href="">
+                                    Hors stock
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="ComponentArticle ArticleSeven">
+                    <div>
+                        <img
+                                src="./img/Baskets/pexels-lappen-fashion-4296075.jpg"
+                                alt=""
+                        />
+                    </div>
+                    <div>
+                        <div class="FlexInfoActicle">
+                            <div>
+                                <h3>$150</h3>
+                                <p>Basket LI</p>
+                            </div>
+                            <div>
+                                <!-- Ajouter href -->
+                                <a href="">
+                                    Hors stock
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                </div>
+            </div>
+    </section>
+</header>
+<footer>
+    <div class="FooterContact">
+        <!-- Mettre une classe pour aligner -->
+        <div>
+            <h2>Contact</h2>
+            <div>
+                <div>
+                    <a href="mailto:manoah.mpah@supinfo.com">
+                        manoah.mpah@supinfo.com
+                    </a>
+                </div>
+                <div>
+                    <a href=""> @ManoahMpah </a>
+                </div>
+                <div>
+                    <a href="tel: 0689986514">+33 6 89 98 65 14</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="FooterSeparation"></div>
+    <div class="FooterArticles">
+        <div>
+            <h2>
+                <a class="TitleCa" href=""> Catégories </a>
+            </h2>
+            <div>
+                <a href=""> T-Shirt </a>
+            </div>
+            <div>
+                <a href=""> Shirt </a>
+            </div>
+            <div>
+                <a href=""> Chaussures </a>
+            </div>
+            <div>
+                <a href=""> Chaussettes </a>
+            </div>
+            <div>
+                <a href=""> Jean </a>
+            </div>
+
+        </div>
+        <div>
+            <h2>
+                <a class="TitleCa" href=""> Hommes </a>
+            </h2>
+            <div>
+                <a href=""> T-Shirt </a>
+            </div>
+            <div>
+                <a href=""> Shirt </a>
+            </div>
+            <div>
+                <a href=""> Chaussures </a>
+            </div>
+            <div>
+                <a href=""> Chaussettes </a>
+            </div>
+            <div>
+                <a href=""> Jean </a>
+            </div>
+
+        </div>
+        <div>
+            <h2>
+                <a class="TitleCa" href=""> Femmes </a>
+            </h2>
+            <div>
+                <a href=""> T-Shirt </a>
+            </div>
+            <div>
+                <a href=""> Shirt </a>
+            </div>
+            <div>
+                <a href=""> Chaussures </a>
+            </div>
+            <div>
+                <a href=""> Chaussettes </a>
+            </div>
+            <div>
+                <a href=""> Jean </a>
+            </div>
+
+        </div>
+        <div>
+            <h2>
+                <a class="TitleCa" href=""> Nouveautés </a>
+            </h2>
+            <div>
+                <a href=""> T-Shirt </a>
+            </div>
+            <div>
+                <a href=""> Shirt </a>
+            </div>
+            <div>
+                <a href=""> Chaussures </a>
+            </div>
+            <div>
+                <a href=""> Chaussettes </a>
+            </div>
+            <div>
+                <a href=""> Jean </a>
+            </div>
+
+        </div>
+    </div>
+</footer>
 </body>
 </html>
