--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <ul>
 
               <li class="BugerMenuD">
-                <a href="">Catégories</a>
+                <a href="./chaussures.html">Catégories</a>
               </li>
               <li class="BugerMenuD">
                 <a href="">Hommes</a>
@@ -80,7 +80,7 @@
         <h1>Courir en tout temps<span>.</span></h1>
         <!-- Ajouter href -->
         <div>
-          <a class="linkAchat" href="">Acheter</a>
+          <a class="linkAchat" href="./chaussures.html">Acheter</a>
         </div>
       </div>
     </section>
@@ -142,7 +142,7 @@
                 </div>
                 <div>
                   <!-- Ajouter href -->
-                  <a href="">
+                  <a href="./article2.html">
                     Voir
                     <i class="fa-solid fa-plus"></i>
                   </a>
@@ -286,7 +286,7 @@
       <div class="FooterArticles">
         <div>
           <h2>
-            <a class="TitleCa" href=""> Catégories </a>
+            <a class="TitleCa" href="./chaussures.html"> Catégories </a>
           </h2>
           <div>
             <a href=""> T-Shirt </a>
