Bag all done, I need to add links on top of the first/second bag

--- a/shorts.html
+++ b/shorts.html
@@ -141,10 +141,9 @@
                                 <p>Basket LB</p>
                             </div>
                             <div>
-                                <!-- Ajouter href -->
-                                <a href="">
-                                    Hors stock
-                                </a>
+                                <h4>
+                                    Hors Stock
+                                </h4>
                             </div>
                         </div>
                     </div>
@@ -163,10 +162,9 @@
                                 <p>Basket LK</p>
                             </div>
                             <div>
-                                <!-- Ajouter href -->
-                                <a href="">
-                                    Hors stock
-                                </a>
+                                <h4>
+                                    Hors Stock
+                                </h4>
                             </div>
                         </div>
                     </div>
@@ -185,10 +183,9 @@
                                 <p>Basket LQ</p>
                             </div>
                             <div>
-                                <!-- Ajouter href -->
-                                <a href="">
-                                    Hors stock
-                                </a>
+                                <h4>
+                                    Hors Stock
+                                </h4>
                             </div>
                         </div>
                     </div>
@@ -207,10 +204,9 @@
                                 <p>Basket LJ</p>
                             </div>
                             <div>
-                                <!-- Ajouter href -->
-                                <a href="">
-                                    Hors stock
-                                </a>
+                                <h4>
+                                    Hors Stock
+                                </h4>
                             </div>
                         </div>
                     </div>
@@ -229,10 +225,9 @@
                                 <p>Basket LI</p>
                             </div>
                             <div>
-                                <!-- Ajouter href -->
-                                <a href="">
-                                    Hors stock
-                                </a>
+                                <h4>
+                                    Hors Stock
+                                </h4>
                             </div>
                         </div>
                     </div>
