--- a/chaussures.html
+++ b/chaussures.html
@@ -68,7 +68,7 @@
             <ul>
                 <li><a class="Here" href="#">Chaussures</a></li>
                 <li><a href="">T-shirt</a></li>
-                <li><a href="">Sac</a></li>
+                <li><a href="./sac.html">Sac</a></li>
                 <li><a href="./shorts.html">shorts</a></li>
             </ul>
         </nav>
@@ -141,10 +141,9 @@
                                 <p>Basket LB</p>
                             </div>
                             <div>
-                                <!-- Ajouter href -->
-                                <a href="">
-                                    Hors stock
-                                </a>
+                                <h4>
+                                    Hors Stock
+                                </h4>
                             </div>
                         </div>
                     </div>
@@ -163,10 +162,9 @@
                                 <p>Basket LK</p>
                             </div>
                             <div>
-                                <!-- Ajouter href -->
-                                <a href="">
-                                    Hors stock
-                                </a>
+                                <h4>
+                                    Hors Stock
+                                </h4>
                             </div>
                         </div>
                     </div>
@@ -185,10 +183,9 @@
                                 <p>Basket LQ</p>
                             </div>
                             <div>
-                                <!-- Ajouter href -->
-                                <a href="">
-                                    Hors stock
-                                </a>
+                                <h4>
+                                    Hors Stock
+                                </h4>
                             </div>
                         </div>
                     </div>
@@ -207,10 +204,9 @@
                                 <p>Basket LJ</p>
                             </div>
                             <div>
-                                <!-- Ajouter href -->
-                                <a href="">
-                                    Hors stock
-                                </a>
+                                <h4>
+                                    Hors Stock
+                                </h4>
                             </div>
                         </div>
                     </div>
@@ -229,10 +225,9 @@
                                 <p>Basket LI</p>
                             </div>
                             <div>
-                                <!-- Ajouter href -->
-                                <a href="">
-                                    Hors stock
-                                </a>
+                                <h4>
+                                    Hors Stock
+                                </h4>
                             </div>
                         </div>
                     </div>
