--- a/NavPhone/NavPhone.html
+++ b/NavPhone/NavPhone.html
@@ -27,9 +27,9 @@
       </div>
       <div class="ContainerNAV">
         <ul>
-          <li><a href="">Hommes</a></li>
-          <li><a href="">Femmes</a></li>
-          <li><a href="">Catégories</a></li>
+          <li><a href="../../E-Commerce/ERROR/ERROR.html">Hommes</a></li>
+          <li><a href="../../E-Commerce/ERROR/ERROR.html">Femmes</a></li>
+          <li><a href="../../E-Commerce/chaussures/chaussures.html">Catégories</a></li>
           <li><a href="../contact/contact.html">Contact</a></li>
         </ul>
       </div>
