--- a/Sac/sac.html
+++ b/Sac/sac.html
@@ -39,16 +39,16 @@
                         <a href="#">Catégories</a>
                     </li>
                     <li class="BugerMenuD">
-                        <a href="">Hommes</a>
+                        <a href="../../E-Commerce/ERROR/ERROR.html">Hommes</a>
                     </li>
                     <li class="BugerMenuD">
-                        <a href="">Femmes</a>
+                        <a href="../../E-Commerce/ERROR/ERROR.html">Femmes</a>
                     </li>
                     <li class="BugerMenuD">
                         <a  href="../contact/contact.html">Contact</a>
                     </li>
                     <li class="BugerMenuD">
-                        <a aria-label="Go to basket" href="">
+                        <a aria-label="Go to basket" href="../../E-Commerce/ERROR/ERROR.html">
                             <i class="fa-solid fa-bag-shopping"></i>
                         </a>
                     </li>
@@ -251,7 +251,7 @@
                     </a>
                 </div>
                 <div>
-                    <a href=""> @ManoahMpah </a>
+                    <a href="../../E-Commerce/ERROR/ERROR.html"> @ManoahMpah </a>
                 </div>
                 <div>
                     <a href="tel: 0689986514">+33 6 89 98 65 14</a>
@@ -263,85 +263,85 @@
     <div class="FooterArticles">
         <div>
             <h2>
-                <a class="TitleCa" href=""> Catégories </a>
+                <a class="TitleCa" href="../../E-Commerce/ERROR/ERROR.html"> Catégories </a>
             </h2>
             <div>
-                <a href=""> T-Shirt </a>
+                <a href="../../E-Commerce/ERROR/ERROR.html"> T-Shirt </a>
             </div>
             <div>
-                <a href=""> Shirt </a>
+                <a href="../../E-Commerce/ERROR/ERROR.html"> Shirt </a>
             </div>
             <div>
-                <a href=""> Chaussures </a>
+                <a href="../../E-Commerce/ERROR/ERROR.html"> Chaussures </a>
             </div>
             <div>
-                <a href=""> Chaussettes </a>
+                <a href="../../E-Commerce/ERROR/ERROR.html"> Chaussettes </a>
             </div>
             <div>
-                <a href=""> Jean </a>
+                <a href="../../E-Commerce/ERROR/ERROR.html"> Jean </a>
             </div>
 
         </div>
         <div>
             <h2>
-                <a class="TitleCa" href=""> Hommes </a>
+                <a class="TitleCa" href="../../E-Commerce/ERROR/ERROR.html"> Hommes </a>
             </h2>
             <div>
-                <a href=""> T-Shirt </a>
+                <a href="../../E-Commerce/ERROR/ERROR.html"> T-Shirt </a>
             </div>
             <div>
-                <a href=""> Shirt </a>
+                <a href="../../E-Commerce/ERROR/ERROR.html"> Shirt </a>
             </div>
             <div>
-                <a href=""> Chaussures </a>
+                <a href="../../E-Commerce/ERROR/ERROR.html"> Chaussures </a>
             </div>
             <div>
-                <a href=""> Chaussettes </a>
+                <a href="../../E-Commerce/ERROR/ERROR.html"> Chaussettes </a>
             </div>
             <div>
-                <a href=""> Jean </a>
+                <a href="../../E-Commerce/ERROR/ERROR.html"> Jean </a>
             </div>
 
         </div>
         <div>
             <h2>
-                <a class="TitleCa" href=""> Femmes </a>
+                <a class="TitleCa" href="../../E-Commerce/ERROR/ERROR.html"> Femmes </a>
             </h2>
             <div>
-                <a href=""> T-Shirt </a>
+                <a href="../../E-Commerce/ERROR/ERROR.html"> T-Shirt </a>
             </div>
             <div>
-                <a href=""> Shirt </a>
+                <a href="../../E-Commerce/ERROR/ERROR.html"> Shirt </a>
             </div>
             <div>
-                <a href=""> Chaussures </a>
+                <a href="../../E-Commerce/ERROR/ERROR.html"> Chaussures </a>
             </div>
             <div>
-                <a href=""> Chaussettes </a>
+                <a href="../../E-Commerce/ERROR/ERROR.html"> Chaussettes </a>
             </div>
             <div>
-                <a href=""> Jean </a>
+                <a href="../../E-Commerce/ERROR/ERROR.html"> Jean </a>
             </div>
 
         </div>
         <div>
             <h2>
-                <a class="TitleCa" href=""> Nouveautés </a>
+                <a class="TitleCa" href="../../E-Commerce/ERROR/ERROR.html"> Nouveautés </a>
             </h2>
             <div>
-                <a href=""> T-Shirt </a>
+                <a href="../../E-Commerce/ERROR/ERROR.html"> T-Shirt </a>
             </div>
             <div>
-                <a href=""> Shirt </a>
+                <a href="../../E-Commerce/ERROR/ERROR.html"> Shirt </a>
             </div>
             <div>
-                <a href=""> Chaussures </a>
+                <a href="../../E-Commerce/ERROR/ERROR.html"> Chaussures </a>
             </div>
             <div>
-                <a href=""> Chaussettes </a>
+                <a href="../../E-Commerce/ERROR/ERROR.html"> Chaussettes </a>
             </div>
             <div>
-                <a href=""> Jean </a>
+                <a href="../../E-Commerce/ERROR/ERROR.html"> Jean </a>
             </div>
 
         </div>
